<resources>
    <string name="app_name">INoty</string>
    <string name="str_format_24h">24 Hours Format</string>
    <string name="str_format_12h">12 Hours Format</string>
    <string name="str_noevent_tomorrow">Tomorrow you have no event</string>
    <string name="str_noevent_today">No Events</string>
    <string name="show_status_bar">Show Statusbar</string>
    <string name="color_statusbar">Customize Color Statusbar</string>
    <string name="change_background_notify">Change Background</string>
    <string name="clock_format">Clock Format</string>
    <string name="show_name">Show carrier\'s name</string>
    <string name="custom_name">Customize carrier\'s name</string>
    <string name="show_signal_strength">Show signal strength</string>
    <string name="rate_app">Rate app</string>
    <string name="set_default">Set Default</string>
    <string name="color">Color</string>
    <string name="images">Image</string>
    <string name="default_">Default</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="toast_turn_on">You should turn on INoty</string>
    <string name="_persional">Personalization</string>
    <string name="turn_inotify">Turn On/Off Notify</string>
    <string name="show_battery_percent">Show battery percentage</string>
    <string name="title_settings">Notify Settings</string>
    <string name="please_rate">Please !</string>
    <string name="rate_text">Rating 5 * to support the application, thank you</string>
    <string name="later">Later</string>
    <string name="yes">Yes</string>
    <string name="change_background">Background has changed</string>
    <string name="your_photo">GALLERY</string>
    <string name="done_default">Background was set default</string>
    <string name="str_not_support_flash">Not support this device</string>
    <string name="str_later">Later</string>
    <string name="str_done_it">I done it!</string>
    <string name="str_noti_author">Authorization</string>
    <string name="str_noti_content_author">\"Please grant "Show pop-up" permission so that the application can work properly\"</string>
    <string name="menu_noty_clear">Clear</string>
    <string name="menu_noty_send_sms">Send SMS</string>
    <string name="menu_noty_call_back">Call back</string>
    <string name="menu_noty_reply">Reply</string>
    <string name="str_missed_call_from">Missed Call From</string>
    <string name="str_message">Message</string>
    <string name="stc_content_message">Content : </string>
    <string name="str_name_message">Message</string>
    <string name="str_message_received">Message Received</string>
    <string name="temp_f">Fahrenheit (°F)</string>
    <string name="temp_f_show"> °F</string>
    <string name="temp_c">Celcius (°C)</string>
    <string name="temp_c_show"> °C</string>
    <string name="w_cancel">Cancel</string>
    <string name="w_ok">Ok</string>
    <string name="choose_color">Choose color</string>
    <string name="eventContinue">Next Event</string>
    <string name="str_label_weather">Weather</string>
</resources>
